# api-adapter

./: .gitignore  README.md  start-all.sh  start-apps.sh  stop-all.sh
backend/: FASTAPI_IMPLEMENTATION.md  README.md  pyproject.toml  run_demo.py  start-mock-v1.sh  start.sh
backend/configs/: api-v2-complete-policy-policyid.yaml  api-v2-coverage-policyid.yaml  api-v2-policies-policyid.yaml
backend/specs/: v2_spec.json
backend/src/adapter/: config_loader.py  endpoint_generator.py  file_watcher.py  main.py  models.py  orchestrator.py  response_builder.py  transformer.py
backend/tests/: mock_v1_server.py  test_config_api.py  test_config_loader.py  test_integration.py  test_orchestrator.py  test_response_builder.py  test_transformer.py
config-generator/: README.md  SIMPLE_TRANSFORM_RULES.md  TRANSFORMATION_SPEC.md  demo_generator.py  generate-config.py  pyproject.toml  simple_test.py  start-qwen.sh  test-output.yaml  test_with_qwen.py
config-generator/demo_output/: generated_config.yaml  v1_spec.json
config-generator/specs/: README.md
config-generator/specs/v1/: complete-v1-api.json
config-generator/specs/v2/: scenario1-simple-rename.json  scenario2-field-combination.json  scenario3-param-shift.json  scenario4-flatten.json  scenario5-multi-endpoint.json  scenario6-body-to-query.json  scenario7-stub.json
config-generator/src/generator/: __init__.py  advanced_validator.py  cli.py  config_generator.py  prompt_templates.py  qwen_client.py
config-generator/tests/: test_config_generator.py  test_prompt_templates.py  test_qwen_client.py
docs/: ACTIVE_CONTEXT.md  (+16 more)
(+18 files in other folders)
